Integrar Swagger. Documentar /api/livros.
