# ISI TP2/server/server.js
@@ -1,5 +1,6 @@
 const express = require('express');
-const apiRouter = require('./routes');
+const apiRouterLivro = require('./routes/livro/index');
+const apiRouterUser = require('./routes/user/register');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
@@ -7,8 +8,10 @@ const app = express();
 
 app.use(express.json());
 
-app.use('/api/livros', apiRouter);
 app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+app.use('/api/livros', apiRouterLivro);
+app.use('/register', apiRouterUser);
 
 
 app.listen(process.env.PORT || '3000', () => {
